--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>红色征途 - 党史智学</title>
     
-    <!-- PWA Configuration -->
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#DE2910">
     <meta name="mobile-web-app-capable" content="yes">
@@ -48,18 +47,21 @@
         background: #999;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "react": "https://esm.sh/react@^19.2.3",
+        "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+      }
+    }
+    </script>
+    <link rel="stylesheet" href="./index.css">
+  </head>
   <body class="bg-slate-50 text-slate-800 h-screen overflow-hidden select-none">
     <div id="root" class="h-full w-full"></div>
+    
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
